[gd_scene load_steps=9 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://L0P1.tscn" type="PackedScene" id=2]
[ext_resource path="res://L0P2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/SFX/winP1.ogg" type="AudioStream" id=4]
[ext_resource path="res://L0map.gd" type="Script" id=5]
[ext_resource path="res://assets/SFX/winP2.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 448.7, 70.492 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 448.983, 67.5981 )

[node name="TileMap" type="TileMap"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 8, 4, 0, 9, 4, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 65536, 4, 0, 65537, 5, 0, 65538, 5, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65544, 5, 0, 65545, 4, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 131072, 4, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131080, 5, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 4, 0, 196611, 5, 0, 196612, 5, 0, 196613, 4, 0, 196614, 4, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 5, 0, 262149, 5, 0, 262150, 4, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 4, 0, 262157, 5, 0, 262158, 5, 0, 327680, 2, 0, 327681, 3, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327688, 3, 0, 327689, 3, 0, 327690, 2, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 393216, 2, 0, 393217, 3, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393224, 3, 0, 393225, 3, 0, 393226, 2, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 458752, 2, 0, 458753, 3, 0, 458754, 3, 0, 458755, 2, 0, 458756, 3, 0, 458757, 3, 0, 458758, 2, 0, 458760, 3, 0, 458761, 2, 0, 458762, 2, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 524288, 2, 0, 524289, 2, 0, 524290, 3, 0, 524291, 2, 0, 524292, 2, 0, 524293, 3, 0, 524294, 2, 0, 524296, 3, 0, 524297, 3, 0, 524298, 2, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 589824, 2, 0, 589825, 2, 0, 589826, 3, 0, 589827, 3, 0, 589828, 2, 0, 589829, 2, 0, 589830, 3, 0, 589832, 3, 0, 589833, 3, 0, 589834, 2, 0, 589835, 2, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 3, 0, 655364, 3, 0, 655365, 2, 0, 655366, 3, 0, 655368, 3, 0, 655369, 2, 0, 655370, 2, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 786432, 2, 0, 786433, 3, 0, 786434, 2, 0, 786435, 2, 0, 786436, 3, 0, 786437, 2, 0, 786438, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 2, 0, 786445, 3, 0, 786446, 3, 0, 851968, 2, 0, 851969, 3, 0, 851970, 2, 0, 851971, 2, 0, 851972, 3, 0, 851973, 2, 0, 851974, 2, 0, 851976, 3, 0, 851977, 2, 0, 851978, 3, 0, 851979, 3, 0, 851980, 2, 0, 851981, 2, 0, 851982, 3, 0, 917504, 2, 0, 917505, 3, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917512, 3, 0, 917513, 2, 0, 917514, 3, 0, 917515, 2, 0, 917516, 2, 0, 917517, 3, 0, 917518, 3, 0, 983040, 2, 0, 983041, 3, 0, 983042, 3, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983048, 3, 0, 983049, 2, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0 )
script = ExtResource( 5 )

[node name="P1" parent="." instance=ExtResource( 2 )]
position = Vector2( 448.962, 2115.3 )

[node name="Camera2D" type="Camera2D" parent="P1"]

[node name="P2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1472.08, 2106.67 )

[node name="Camera2D" type="Camera2D" parent="P2"]

[node name="Goal1" type="Area2D" parent="."]
position = Vector2( 535.301, 660.492 )

[node name="ColGol1" type="CollisionShape2D" parent="Goal1"]
position = Vector2( -90, -588 )
shape = SubResource( 1 )

[node name="Win1" type="AudioStreamPlayer" parent="Goal1"]
stream = ExtResource( 4 )

[node name="Goal2" type="Area2D" parent="."]
position = Vector2( 1470.78, 68.4917 )

[node name="ColGol2" type="CollisionShape2D" parent="Goal2"]
shape = SubResource( 2 )

[node name="Win2" type="AudioStreamPlayer" parent="Goal2"]
stream = ExtResource( 6 )

[node name="SwitchTime" type="Timer" parent="."]
wait_time = 2.6
[connection signal="area_entered" from="Goal1" to="." method="_on_Goal1_area_entered"]
[connection signal="area_entered" from="Goal2" to="." method="_on_Goal2_area_entered"]
[connection signal="timeout" from="SwitchTime" to="." method="_on_SwitchTime_timeout"]
